==> oopuuu/zTC1/mico-os/platform/MCU/RTL8711/peripherals/platform_uart.c <==
#include "mico_rtos.h"
#include "mico_platform.h"
#include "platform.h"
#include "platform_peripheral.h"
#include "debug.h"
#include "pinmap.h"
#define mico_log(M, ...) custom_log("MICO", M, ##__VA_ARGS__)
#define mico_log_trace() custom_log_trace("MICO")
#define UART_NUM (3)
#define SERIAL_TX_IRQ_EN        0x01
#define SERIAL_RX_IRQ_EN        0x02
#define SERIAL_TX_DMA_EN        0x01
#define SERIAL_RX_DMA_EN        0x02

OSStatus platform_uart_init( platform_uart_driver_t* driver, const platform_uart_t* peripheral, const platform_uart_config_t* config, ring_buffer_t* optional_ring_buffer )
{
  OSStatus          err = kNoErr;

  platform_mcu_powersave_disable();

  require_action_quiet( ( driver != NULL ) && ( peripheral != NULL ) && ( config != NULL ), exit, err = kParamErr);
  require_action_quiet( (optional_ring_buffer == NULL) || ((optional_ring_buffer->buffer != NULL ) && (optional_ring_buffer->size != 0)), exit, err = kParamErr);
    
  driver->rx_size              = 0;
  driver->tx_size              = 0;
  driver->last_transmit_result = kNoErr;
  driver->last_receive_result  = kNoErr;
  driver->peripheral           = (platform_uart_t*)peripheral;
#ifndef NO_MICO_RTOS
  mico_rtos_init_semaphore( &driver->tx_complete, 1 );
  mico_rtos_init_semaphore( &driver->rx_complete, 1 );
  mico_rtos_init_semaphore( &driver->sem_wakeup,  1 );
  mico_rtos_init_mutex    ( &driver->tx_mutex );
#else
  driver->tx_complete = false;
  driver->rx_complete = false;
#endif
    
  err = rtk_uart_init(driver, (platform_uart_t*)peripheral, config, optional_ring_buffer);

    if (optional_ring_buffer != NULL){
      /* Note that the ring_buffer should've been initialised first */
      driver->rx_buffer = optional_ring_buffer;
      driver->rx_size   = 0;
      //platform_uart_receive_bytes( uart, optional_rx_buffer->buffer, optional_rx_buffer->size, 0 );
    }

exit:
  MicoMcuPowerSaveConfig(true);
  return err;
}

OSStatus platform_uart_deinit( platform_uart_driver_t* driver )
{
  uint8_t          uart_number;
  OSStatus          err = kNoErr;

  platform_mcu_powersave_disable();

  require_action_quiet( ( driver != NULL ), exit, err = kParamErr);

  err = rtk_uart_deinit(driver);
  
#ifndef NO_MICO_RTOS
  mico_rtos_deinit_semaphore( &driver->rx_complete );
  mico_rtos_deinit_semaphore( &driver->tx_complete );
  mico_rtos_deinit_mutex( &driver->tx_mutex );
#else
  driver->rx_complete = false;
  driver->tx_complete = false;
#endif
  driver->rx_size              = 0;
  driver->tx_size              = 0;
  driver->last_transmit_result = kNoErr;
  driver->last_receive_result  = kNoErr;

exit:
    platform_mcu_powersave_enable();
    return err;
}

OSStatus platform_uart_transmit_bytes( platform_uart_driver_t* driver, const uint8_t* data_out, uint32_t size )
{
  OSStatus err = kNoErr;
#ifndef NO_MICO_RTOS
  mico_rtos_lock_mutex(&driver->tx_mutex);
#endif
  if( size == 1 )
  {
     tmp_data_out = *data_out;
     data_out = &tmp_data_out;
  }

  platform_mcu_powersave_disable();
  
    PHAL_RUART_OP      pHalRuartOp;
    PHAL_RUART_ADAPTER pHalRuartAdapter=(PHAL_RUART_ADAPTER)&(driver->peripheral->hal_uart_adp);
    u8  uart_idx = pHalRuartAdapter->UartIndex;
    int32_t ret;

    pHalRuartOp = &(driver->peripheral->hal_uart_op);

    if ((serial_dma_en[uart_idx] & SERIAL_TX_DMA_EN)==0) {
        PUART_DMA_CONFIG   pHalRuartDmaCfg;
        
        pHalRuartDmaCfg = &driver->peripheral->uart_gdma_cfg;
        if (HAL_OK == HalRuartTxGdmaInit(pHalRuartOp, pHalRuartAdapter, pHalRuartDmaCfg)) {
            serial_dma_en[uart_idx] |= SERIAL_TX_DMA_EN;
        }
        else {
            return kGeneralErr;
        }
    }    

    HalRuartEnterCritical(pHalRuartAdapter);	
    ret = pHalRuartOp->HalRuartDmaSend(pHalRuartAdapter, (u8*)data_out, size);
    HalRuartExitCritical(pHalRuartAdapter);	
    if(ret != HAL_OK)
        return kGeneralErr;
  
/* Wait for transmission complete */
#ifndef NO_MICO_RTOS
  mico_rtos_get_semaphore( &driver->tx_complete, MICO_NEVER_TIMEOUT );
#else 
  while( driver->tx_complete == false );
  driver->tx_complete = false;
#endif

  /* Disable DMA and clean up */
  driver->tx_size = 0;
  err = driver->last_transmit_result;

exit:  
  platform_mcu_powersave_enable();
#ifndef NO_MICO_RTOS
  mico_rtos_unlock_mutex(&driver->tx_mutex);
#endif
  return err;
}

OSStatus platform_uart_receive_bytes( platform_uart_driver_t* driver, uint8_t* data_in, uint32_t expected_data_size, uint32_t timeout_ms )
{
  OSStatus err = kNoErr;

  //platform_mcu_powersave_disable();

  require_action_quiet( ( driver != NULL ) && ( data_in != NULL ) && ( expected_data_size != 0 ), exit, err = kParamErr);

  if ( driver->rx_buffer != NULL )
  {
      /* Check if ring buffer already contains the required amount of data. */
      if ( expected_data_size > ring_buffer_used_space( driver->rx_buffer ) )
      {
        /* Set rx_size and wait in rx_complete semaphore until data reaches rx_size or timeout occurs */
        driver->rx_size = expected_data_size;
        if(expected_data_size <= ring_buffer_used_space( driver->rx_buffer ))
        {
          goto end;
        }
        
#ifndef NO_MICO_RTOS
        if ( mico_rtos_get_semaphore( &driver->rx_complete, timeout_ms) != kNoErr )
        {
          driver->rx_size = 0;
          return kTimeoutErr;
        }
#else
        driver->rx_complete = false;
        if(expected_data_size <= ring_buffer_used_space( driver->rx_buffer ))
        {
          goto end;
        }
        int delay_start = mico_get_time_no_os();
        while(driver->rx_complete == false){
          if(mico_get_time_no_os() >= delay_start + timeout_ms && timeout_ms != MICO_NEVER_TIMEOUT){
            driver->rx_size = 0;
            return kTimeoutErr;
          }
        }
#endif
      end:        
        /* Reset rx_size to prevent semaphore being set while nothing waits for the data */
        driver->rx_size = 0;
      }
      
      // Grab data from the buffer
      uint32_t read_size = 0;
      ring_buffer_read(driver->rx_buffer, data_in, expected_data_size, &read_size);
  }
  else
  {
      err = rtk_uart_recv_stream_timeout( driver, data_in, expected_data_size, timeout_ms, NULL );
  }
  
exit:
  //platform_mcu_powersave_enable();
  return err;
}

void platform_uart_irq( platform_uart_driver_t* driver )
{
  int status;
  uint8_t rxData;
  //platform_uart_port_t* uart = (platform_uart_port_t*) driver->peripheral->port;

    rxData = rtk_uart_getc(driver);	
    ring_buffer_write( driver->rx_buffer, &rxData,1 );

    status++;

    //printf("\r\nnuart irq %d\r\n", status);	 

    // Notify thread if sufficient data are available
    if ( ( driver->rx_size > 0 ) &&
        ( ring_buffer_used_space( driver->rx_buffer ) >= driver->rx_size ) )
    {
  #ifndef NO_MICO_RTOS
      mico_rtos_set_semaphore( &driver->rx_complete );
  #else
      driver->rx_complete = true;
  #endif
      driver->rx_size = 0;
    }

}

void platform_uart_rx_dma_irq( platform_uart_driver_t* driver )
{
    mico_log("uart irq");	 

        /* Set semaphore regardless of result to prevent waiting thread from locking up */
        #ifndef NO_MICO_RTOS
        mico_rtos_set_semaphore( &driver->rx_complete );
        #else
        driver->rx_complete = true;
        #endif

}
